carlibraryapi/carlibraryapi.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: carlibraryapi
  name: carlibraryapi
spec:
  replicas: 1
  selector:
    matchLabels:
      app: carlibraryapi
  template:
    metadata:
      labels:
        app: carlibraryapi
    spec:
      containers:
      - name: carlibraryapi
        image: tomsearcher/carlibraryapi
        ports:
          - containerPort: 5000

---

apiVersion: v1
kind: Service
metadata:
  name: carlibraryapi
  labels:
    app: carlibraryapi
spec:
  ports:
  - port: 5000
    name: carlibraryapi
  clusterIP: None
  selector:
    app: carlibraryapi
