carlibraryapi/postgres.yaml

apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: postgres
  name: postgres
spec:
  replicas: 1
  selector:
    matchLabels:
      app: postgres
  template:
    metadata:
      labels:
        app: postgres
    spec:
      containers:
        - name: postgres
          image: postgres
          ports:
          - containerPort: 5432
          volumeMounts:
          - name: data-postgres
            mountPath: /var/lib/postgresql/data
            subPath: postgres
      volumes:
      - name: data-postgres
        persistentVolumeClaim:
          claimName: data-postgres

---

apiVersion: v1
kind: Service
metadata:
  name: postgres
  labels:
    app: postgres
spec:
  ports:
  - port: 5432
    name: postgres
  clusterIP: None
  selector:
    app: postgres
